# graph-paper-text-binarization

./: .gitignore  CMakeLists.txt  README.md
apps/: demo.cpp
include/graph_binarization/: binarization.hpp
src/: binarization.cpp
